# ControlPlane-API

./: .gitignore  CLAUDE.md  HELP.md  README.md  pom.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
audit/: F-access-accepted-risk-1.md  F-agent-clone-autolock-1.md  F-agent-clone-autolock-2.md  F-agent-enroll-race-1.md  F-agent-mtlsjoin-revocation-1.md  F-append-only-1.md  F-assertion-iss.md  F-audit-chain-1.md  F-audit-create-ahead-1.md  F-audit-default-recovery-1.md  F-audit-deny-source-1.md  F-audit-forwarder-hardening-1.md  F-audit-retention-1.md  F-audit-role-bypass-1.md  F-audit-scope-bypass-1.md  F-audit-search-1.md  F-audit-search-window-1.md  F-audit-write-dimensions-1.md  F-auth-device-begin-public.md  F-auth-reaper.md  F-authz-audit-1.md  F-authz-blank-input-1.md  F-authz-cap-bleed-1.md  F-authz-cap-granular-deny-1.md  F-authz-deny-sourceip-1.md  F-authz-effect-failclosed-1.md  F-authz-peer-npe-1.md  F-authz-policy-scale-1.md  F-authz-session-id-1.md  F-authz-torn-read-1.md  F-basic-username-timing.md  F-bcl-logout-token.md  F-bootstrap-credential-ttl.md  F-bootstrap-ordering.md  F-breakglass-alert-timing-1.md  F-breakglass-code-ratelimit-1.md  F-ca-kek-1.md  F-ca-rotation-1.md  F-cert-hardening-1.md  F-cert-pin-1.md  (+92 more)
contracts/: .gitignore  README.md  VERSIONING.md  lint.sh  redocly.yaml
contracts/wire/conformance/framegen/: Cargo.toml  build.rs
contracts/wire/conformance/framegen/src/: main.rs
deploy/: session-limits-example.properties
docs/: DATA-MODEL.md
scripts/: gate.sh  sync-testing.sh  vendor-contracts.sh
(+563 files in other folders)
